--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
         "activityBar.background": "#263020",
         "titleBar.activeBackground": "#36442D",
         "titleBar.activeForeground": "#F9FBF8"
-    }
+    },
+    "python.analysis.typeCheckingMode": "standard"
 }
