--- a/kraph/api/project.json
+++ b/kraph/api/project.json
@@ -61,6 +61,7 @@
                 "include_fields": [],
                 "convert_list_to_tuple": true
             },
+            "create_catchall": true,
             "options": {
                 "enabled": true,
                 "extra": "forbid",
