--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,91 @@
-[tool.poetry]
+[project]
 name = "kraph"
-version = "0.1.105"
-description = ""
-authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
-packages = [{ include = "kraph" }]
+version = "0.5.0" 
+readme = "README.md"
+readme-content-type = "text/markdown"
+homepage = "https://arkitekt.live"
+description = "the arkitekt knowledge graph"
+authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
+requires-python = ">=3.11, <4.0"
+license = "GPL-3.0-or-later"
+dependencies = [
+    "rath>=3",
+    "websockets>=15.0.1",
+]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-rath = ">=1.0.0"
 
-[tool.poetry.group.dev.dependencies]
-autoflake = "^1.7.7"
-pytest = "^7.2.0"
-pytest-qt = "^4.2.0"
-pytest-asyncio = "^0.20.2"
-websockets = "^10.4"
-black = "^22.10.0"
-pytest-cov = "^4.0.0"
+[tool.uv]
+dev-dependencies =  [
+    "pytest-asyncio>=0.26.0",
+    "pytest-cov>=6.1.1",
+    "pytest>=8.3.5",
+    "python-semantic-release>=9.21.0",
+    "autoflake>=1.7.7,<2",
+    "aiohttp>=3.8.3,<4",
+    "black>=23.1.0,<24",
+    "pytest-aiohttp>=1.0.4,<2",
+    "ruff>=0.0.254",
+    "dokker>=2",
+]
+
+
+[tool.ruff]
+extend-select = ["ANN", "D1"]
+
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+
+# Same as Black.
+line-length = 100
+
+[tool.hatch.build.targets.sdist]
+include = ["kraph"]
+
+[tool.hatch.build.targets.wheel]
+include = ["kraph"]
+
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
-qt_api = "pyqt5"
 markers = [
     "integration: marks tests that require a running server",
-    "qt: marks tests that require a running qt application",
     "define: marks tests that concern to definining a funcionality",
     "shrink: marks tests that concern to serializing inputs to requests to an actor",
     "expand: marks tests that concern to serializing outputs from answers of an actor",
     "actor: marks tests that concern actors",
 ]
+
+testpaths = ["tests"]
+
+
+[tool.semantic_release]
+version_toml = ["pyproject.toml:project.version"]
+upload_to_pypi = true
+branch = "main"
+build_command = "uv build"
 
