fix: Refactor datalayer and rath context management; update execute and subscribe functions
- Updated the `__aexit__` method in `DataLayer` and `KraphRath` to include type hints and return None.
- Refactored `execute` and `subscribe` functions in `funcs.py` to use type hints and improved error handling.
- Changed `adownload_file` and `download_file` functions in `io.py` to require a non-optional `file_name`.
- Removed unused imports and unnecessary code in `kraph.py` and `scalars.py`.
- Updated dependencies in `pyproject.toml` and `uv.lock` to use `dokker` version 2.1.1.
- Deleted unused `utils.py` file to clean up the codebase.

--- a/kraph/api/project.json
+++ b/kraph/api/project.json
@@ -157,6 +157,10 @@
                 },
                 {
                     "type": "turms.plugins.funcs.FuncsPlugin",
+                    "coercible_scalars": {
+                        "ID": "rath.scalars.IDCoercible",
+                        "Cypher": "kraph.scalars.CypherCoercible"
+                    },
                     "expand_input_types": [
                         "input"
                     ],
