--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
 requires-python = ">=3.11, <4.0"
 license = "GPL-3.0-or-later"
 dependencies = [
-    "rath>=3.2",
+    "dokker>=2.3",
+    "rath>=3.5",
     "websockets>=15.0.1",
 ]
 
