feat: add arkitekt-next support

--- a/kraph/api/project.json
+++ b/kraph/api/project.json
@@ -153,6 +153,7 @@
             },
             "additional_config": {},
             "force_plugin_order": true,
+            "omited_document_rules": [],
             "parsers": [],
             "plugins": [
                 {
